--- a/Wikipedia/Code/InsertMediaSettingsTextTableViewCell.xib
+++ b/Wikipedia/Code/InsertMediaSettingsTextTableViewCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,30 +11,39 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="InsertMediaSettingsTextTableViewCell" customModule="Wikipedia" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="364" height="187"/>
+            <rect key="frame" x="0.0" y="0.0" width="364" height="170"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mkn-Sw-fPQ">
                     <rect key="frame" x="12" y="20" width="320" height="19.5"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
-                    <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
+                    <color key="textColor" systemColor="lightTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="251" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aAC-ZM-LAc" customClass="ThemeableTextView" customModule="Wikipedia" customModuleProvider="target">
-                    <rect key="frame" x="12" y="51.5" width="320" height="87.5"/>
+                    <rect key="frame" x="12" y="51.5" width="320" height="33"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label that shows next to the item for all readers" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UD4-J2-DXZ">
-                    <rect key="frame" x="12" y="151" width="320" height="16"/>
+                    <rect key="frame" x="12" y="96.5" width="320" height="16"/>
                     <fontDescription key="fontDescription" style="UICTFontTextStyleFootnote"/>
-                    <color key="textColor" cocoaTouchSystemColor="lightTextColor"/>
+                    <color key="textColor" systemColor="lightTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uHN-eV-kyP">
+                    <rect key="frame" x="12" y="124.5" width="75" height="35"/>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                    <connections>
+                        <action selector="performLearnMoreAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="pQ6-Lg-ih3"/>
+                    </connections>
+                </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="QHG-C3-MAR"/>
             <constraints>
-                <constraint firstItem="QHG-C3-MAR" firstAttribute="bottom" secondItem="UD4-J2-DXZ" secondAttribute="bottom" constant="20" id="1bI-aI-VLT"/>
+                <constraint firstItem="uHN-eV-kyP" firstAttribute="leading" secondItem="UD4-J2-DXZ" secondAttribute="leading" id="7fY-2e-i1S"/>
                 <constraint firstItem="aAC-ZM-LAc" firstAttribute="top" secondItem="mkn-Sw-fPQ" secondAttribute="bottom" constant="12" id="CDo-p3-eJB"/>
                 <constraint firstItem="aAC-ZM-LAc" firstAttribute="trailing" secondItem="mkn-Sw-fPQ" secondAttribute="trailing" id="Dtq-yo-3vE"/>
                 <constraint firstItem="UD4-J2-DXZ" firstAttribute="top" secondItem="aAC-ZM-LAc" secondAttribute="bottom" constant="12" id="FSd-Ds-KwB"/>
@@ -44,17 +51,24 @@
                 <constraint firstItem="aAC-ZM-LAc" firstAttribute="leading" secondItem="mkn-Sw-fPQ" secondAttribute="leading" id="O92-CT-hN6"/>
                 <constraint firstItem="mkn-Sw-fPQ" firstAttribute="leading" secondItem="QHG-C3-MAR" secondAttribute="leading" constant="12" id="Yog-A9-zXS"/>
                 <constraint firstItem="UD4-J2-DXZ" firstAttribute="leading" secondItem="mkn-Sw-fPQ" secondAttribute="leading" id="d6J-wU-pib"/>
+                <constraint firstItem="QHG-C3-MAR" firstAttribute="bottom" secondItem="uHN-eV-kyP" secondAttribute="bottom" constant="10.5" id="n6E-cD-9mY"/>
                 <constraint firstItem="UD4-J2-DXZ" firstAttribute="trailing" secondItem="mkn-Sw-fPQ" secondAttribute="trailing" id="on4-Lk-JQ3"/>
                 <constraint firstItem="QHG-C3-MAR" firstAttribute="trailing" secondItem="mkn-Sw-fPQ" secondAttribute="trailing" constant="32" id="qs1-CA-6Bj"/>
+                <constraint firstItem="uHN-eV-kyP" firstAttribute="top" secondItem="UD4-J2-DXZ" secondAttribute="bottom" constant="12" id="y0f-cT-eMf"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="QHG-C3-MAR"/>
             <connections>
                 <outlet property="footerLabel" destination="UD4-J2-DXZ" id="7sh-NP-jBM"/>
                 <outlet property="headerLabel" destination="mkn-Sw-fPQ" id="U0g-nK-jqG"/>
+                <outlet property="learnMoreButton" destination="uHN-eV-kyP" id="kPv-WE-7Oo"/>
                 <outlet property="textView" destination="aAC-ZM-LAc" id="77u-P4-g8N"/>
             </connections>
-            <point key="canvasLocation" x="25.600000000000001" y="-183.95802098950526"/>
+            <point key="canvasLocation" x="-27.199999999999999" y="-144.82758620689657"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="lightTextColor">
+            <color white="1" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
